# syncthing-optimization

./: .gitignore  SUBAGENT_HANDOFF.md
.github/workflows/: parity-guardrails.yaml
parity/: README.md  dashboard.json  dashboard.md  feature-manifest.json  guardrail-report-release.json  guardrail-report-replacement.json  guardrail-report.json  mapping-rust.json  replacement-gates.json
parity/diff-reports/: durability.json  function-pair-cache.json  function-pair-discrepancy-report-dryrun-smoke.json  function-pair-discrepancy-report-dryrun.json  function-pair-discrepancy-report-local-only-full.json  function-pair-discrepancy-report-sample.json  function-pair-discrepancy-report-t1-batch1.json  function-pair-discrepancy-report-t1-batch2.json  function-pair-discrepancy-report-t1-batch3-refresh.json  function-pair-discrepancy-report-t1-batch3.json  function-pair-review-plan.json  interop.json  latest.json  replacement-protocol-surface-missing.json  test-status.json  (+1 more)
script/: parity.go  parity_external_soak.go  parity_external_soak_fuzz_test.go  parity_harness.go  parity_harness_fuzz_test.go  parity_harness_go.go  parity_harness_test.go  parity_pair_review.go  parity_pair_review_test.go  parity_pr_guard.go  parity_test.go  redeploy_syncthing_rs_app.sh  syncthing_rs_app_wrapper.sh
syncthing-rs/: Cargo.toml  build.rs
syncthing-rs/src/: bep.rs  bep_compat.rs  bep_core.rs  bep_proto.rs  config.rs  db.rs  folder_core.rs  folder_modes.rs  index_engine.rs  main.rs  model_core.rs  planner.rs  protocol.rs  protocol_surface.rs  runtime.rs  scenarios.rs  store.rs  walker.rs
(+42 files in other folders)
