[package]
name = "syncthing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4"
lz4_flex = "0.11"
prost = "0.13"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
humantime = "2.1"
tiny_http = "0.12"
unicode-normalization = "0.1"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
